// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> renders 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {background} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {children} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#4a4a4a",
                  "fontFamily": undefined,
                },
                false,
                false,
                false,
                false,
                Object {
                  "fontSize": 16,
                  "lineHeight": 20.8,
                },
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                Object {},
              ]
            }
          >
            Hello World
          </Text>
        </View>
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {highlight} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              Object {
                "fontWeight": "bold",
              },
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "color": "#ffffff",
                "flex": 1,
                "fontSize": 20,
                "padding": 16,
              },
            ]
          }
        >
          Hello world
        </Text>
        <View
          accessible={true}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "borderRadius": 3,
                "marginHorizontal": 5,
              },
              Object {
                "borderRadius": 22.5,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "borderRadius": 3,
                  "justifyContent": "center",
                },
                Object {
                  "height": 45,
                  "minWidth": 45,
                  "paddingHorizontal": 30,
                },
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                false,
                false,
                Object {
                  "borderRadius": 22.5,
                },
                Object {
                  "paddingHorizontal": 0,
                },
                false,
                false,
                false,
                false,
                false,
                false,
                false,
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/close.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                  undefined,
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 22.5,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#ffffff",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <RCTScrollView
        onScroll={[Function]}
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {onClose} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessible={true}
          onLayout={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="box-only"
          style={
            Array [
              Object {
                "borderRadius": 3,
                "marginHorizontal": 5,
              },
              Object {
                "borderRadius": 22.5,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignContent": "center",
                  "alignItems": "center",
                  "borderRadius": 3,
                  "justifyContent": "center",
                },
                Object {
                  "height": 45,
                  "minWidth": 45,
                  "paddingHorizontal": 30,
                },
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                },
                false,
                false,
                Object {
                  "borderRadius": 22.5,
                },
                Object {
                  "paddingHorizontal": 0,
                },
                false,
                false,
                false,
                false,
                false,
                false,
                false,
              ]
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../components/Icon/assets/close_dark.png",
                }
              }
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "height": 20,
                    "width": 20,
                  },
                  undefined,
                  undefined,
                ]
              }
            />
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderRadius": 3,
                  "bottom": 0,
                  "left": 0,
                  "overflow": "hidden",
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "borderRadius": 22.5,
                },
              ]
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#4a4a4a",
                  "height": 0,
                  "opacity": 0,
                  "width": 0,
                  "zIndex": 0,
                }
              }
            />
          </View>
        </View>
      </View>
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {reverse} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {style} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {styleContainer} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,255,0,0.25)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {title} 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 1334,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#4a4a4a",
                "fontFamily": undefined,
              },
              false,
              false,
              Object {
                "fontWeight": "bold",
              },
              false,
              Object {
                "fontSize": 16,
                "lineHeight": 20.8,
              },
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              false,
              Object {
                "flex": 1,
                "fontSize": 20,
                "padding": 16,
              },
            ]
          }
        >
          Hello world
        </Text>
      </View>
      <RCTScrollView
        onScroll={[Function]}
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;

exports[`<Dialog> when {visible} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#F5F5F6",
        "borderRadius": 3,
        "display": undefined,
        "maxHeight": "100%",
        "maxWidth": "100%",
        "minWidth": "66%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
        "transform": Array [
          Object {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <RCTSafeAreaView
      style={
        Object {
          "flex": 1,
          "maxHeight": "100%",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      />
      <RCTScrollView
        style={
          Array [
            Object {
              "paddingBottom": 16,
              "paddingHorizontal": 16,
            },
            false,
          ]
        }
      >
        <View />
      </RCTScrollView>
    </RCTSafeAreaView>
  </View>
</View>
`;
